<?xml version="1.0"?>
<package format="2">
  <name>plansys2_hospital_l4ros2</name>
  <version>1.0.0</version>
  <description>
    PlanSys2 
  </description>
  <license>Apache 2.0</license>
  <author email="l4ros@email.com">L4ROS</author>
  <maintainer email="l4ros@email.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
