<?xml version="1.0"?>
<package format="2">
  <name>plansys2_hospital_l4ros2</name>
  <version>1.0.0</version>
  <description>
    PlanSys2 
  </description>
  <license>Apache 2.0</license>
  <author email="l4ros@email.com">L4ROS</author>
  <maintainer email="l4ros@email.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>plansys2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_bt_actions</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
